# rowan

./: .env.example  .gitignore  CHANGELOG.md  CHAT_PERSISTENCE.md  CHAT_PERSISTENCE_QUICKSTART.md  CHAT_SIDEBAR_FEATURE.md  CLEANUP_FIX.md  FEATURE_SUMMARY_LIST_FORMATIONS.md  FIRST_QUERY_FIX.md  FORMATIONS_QUICK_REFERENCE.md  GO_LIVE_CHECKLIST.md  GRADIO_INTEGRATION.md  GRADIO_STREAMING_FIX.md  IMPLEMENTATION_SUMMARY.md  INTENSITY_RECURSION_FIX.md  LAYOUT_IMPROVEMENTS.md  LIST_FORMATIONS_FEATURE.md  MANUAL_RAG_IMPROVEMENTS.md  MANUAL_RAG_QUICKSTART.md  MARKDOWN_RENDERING.md  NEW_WEB_UI_SUMMARY.md  README.md  SCD_AGENT_README.md  SIDEBAR_DEBUGGING.md  TOOL_INTEGRATION_COMPLETE.md  WEB_APP_README.md  build_views.py  chat_persistence_diagram.txt  concept_resolver.py  dance_agent.py  dance_tools.py  database.py  debug_skip_change_query.py  deploy_vps.sh  enrich_manual_metadata.py  explore_scddb.py  extract_manual_structured.py  extract_teaching_guide.py  extract_toc_structure.py  gradio_app.py  (+73 more)
.windsurf/: instructions.md
docs/: RSCDS_MANUAL_RAG.md  STRUCTURED_MANUAL_RAG.md  changelog_workflow.md  database_fields_roadmap.md  emergency_runbook.md  growth-and-sustainability.md  release_checklist.md  subscription_model.md  uptime_checks.md
experiments/: morning-report.md  overnight-brief.md  track1-report.md  track2-report.md  track3-baseline-predictions.json  track3-baseline-report.json  track3-report.md  track3_eval.py  track3_eval_cases.json
scripts/: health_check.py
templates/: admin_dashboard.html  admin_login.html  auth_error.html  index.html  privacy.html  (+2 more)
(+5 files in other folders)
