[project]
name = "dance-teacher"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.19.0",
    "openai>=1.106.1",
    "langgraph>=0.2.50",
    "langchain-openai>=0.2.0",
    "langchain-core>=0.3.0",
    "python-dotenv>=1.0.0",
    "gradio>=4.0.0",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "jinja2>=3.1.0",
    "pypdf>=4.0.0",
    "chromadb>=0.4.0",
    "langchain-text-splitters>=0.3.0",
    "langchain-community>=0.3.0",
    "pymupdf>=1.24.9",
    "pillow>=10.4.0",
    "lxml>=5.2.2",
    "httpx>=0.27.0",
    "langchain-google-genai>=2.0.0",
    "itsdangerous>=2.0.0",
]

[tool.setuptools.packages.find]
exclude = ["assets*", "templates*"]
